--- a/src/App.css
+++ b/src/App.css
@@ -180,7 +180,8 @@
   }
   .login-button{
     margin: 10px 8px;
-    font-size: 14px;
+    font-size: 10px;
+    text-align: center;
   }
   .menu-list{
     display: none;
